TestRepo2/src/objects/Cart_Item__c.object
<CustomObject>
    <description>POS Project: junction object that represents the many-to-many relationship between Carts and Items</description>
    <fields>
        <fullName>Account_Hierarchy__c</fullName>
        <formula>IF(NOT(ISBLANK(Ship_To__r.Account__r.Spirits_Hierarchy__c)), &quot;Spirits&quot;, IF(NOT(ISBLANK(Ship_To__r.Account__r.Wine_Hierarchy__c)), &quot;Wines&quot;, &quot;&quot;))</formula>
        <label>Account Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Ship_To__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <label>Cart</label>
        <referenceTo>Cart__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Ship_To__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Ship_To__r.Contact_Email__c</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Ship_To__r.Attention__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Ship_To__r.Phone__c</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Attribute_Value__c</fullName>
        <label>Custom Attribute Value</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>IF(NOT(ISBLANK(Ship_To__r.Account__r.Spirits_Division__c)), Ship_To__r.Account__r.Spirits_Division__c, IF(NOT(ISBLANK(Ship_To__r.Account__r.Wines_Division__c)), Ship_To__r.Account__r.Wines_Division__c, &quot;&quot;))</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Manual_WBS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual WBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Customization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Customization</label>
        <referenceTo>Item_Customization__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>IF(NOT(ISBLANK(Ship_To__r.Account__r.Spirits_Market__c)), Ship_To__r.Account__r.Spirits_Market__c, IF(NOT(ISBLANK(Ship_To__r.Account__r.Wines_Market__c)), Ship_To__r.Account__r.Wines_Market__c, &quot;&quot;))</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packout_Quantity__c</fullName>
        <formula>Item__r.Packout_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packout Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(NOT(ISBLANK(Ship_To__r.Account__r.Spirits_Region__c)), Ship_To__r.Account__r.Spirits_Region__c, IF(NOT(ISBLANK(Ship_To__r.Account__r.Wines_Region__c)), Ship_To__r.Account__r.Wines_Region__c, &quot;&quot;))</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_District__c</fullName>
        <formula>IF(NOT(ISBLANK(Ship_To__r.Account__r.Spirits_State_District__c)), Ship_To__r.Account__r.Spirits_State_District__c, IF(NOT(ISBLANK(Ship_To__r.Account__r.Wines_State_District__c)), Ship_To__r.Account__r.Wines_State_District__c, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Ship_To__r.State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <formula>Ship_To__r.Street_2__c</formula>
        <label>Street 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Ship_To__r.Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Spend__c</fullName>
        <formula>IF((ISPICKVAL(Item__r.Status__c, &quot;Cancelled&quot;) || ISPICKVAL(Item__r.Status__c, &quot;Removed&quot;)), 0, Quantity__c * (Item__r.Current_Price__c + (Item__r.Current_Price__c * Item__r.Estimated_Shipping_Tax__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Code__c</fullName>
        <label>Tracking Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS__c</fullName>
        <label>WBS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Ship_To__r.Zip__c</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>Cart Item</label>
    <listViews>
        <fullName>Cart_with_Items_CRT</fullName>
        <columns>Cart__c</columns>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cart__c</field>
            <operation>equals</operation>
            <value>CRT-00001254</value>
        </filters>
        <label>Cart with Items - CRT-00001597</label>
    </listViews>
    <nameField>
        <displayFormat>CIT-{0000000000}</displayFormat>
        <label>Cart Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Custom_Attribute_Value_Max_Length</fullName>
        <active>true</active>
        <description>Enforces the &quot;Custom Attribute Value&quot; field not to exceed the size specified in the &quot;Custom Attribute Length&quot; field on the related Item Customization</description>
        <errorConditionFormula>LEN(Custom_Attribute_Value__c) &gt; Item_Customization__r.Custom_Attribute_Length__c</errorConditionFormula>
        <errorDisplayField>Custom_Attribute_Value__c</errorDisplayField>
        <errorMessage>The number of characters of the custom attribute value exceeds the maximum size specified on the related Item Customization</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customizable_Item</fullName>
        <active>false</active>
        <description>Enforces the &quot;Custom Attribute Value&quot; field not to have a value if the related Item is not customizable</description>
        <errorConditionFormula>NOT(ISBLANK(Custom_Attribute_Value__c)) &amp;&amp; NOT(Item__r.RecordType_Name__c = &quot;Customizable&quot;)</errorConditionFormula>
        <errorDisplayField>Custom_Attribute_Value__c</errorDisplayField>
        <errorMessage>Please do not provide a custom attribute value. The related item is not customizable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Item_Customization</fullName>
        <active>true</active>
        <description>Enforces having values for Custom Attribute Value and Item Customization at the same time</description>
        <errorConditionFormula>(NOT(ISBLANK(Custom_Attribute_Value__c)) &amp;&amp; ISBLANK(Item_Customization__c)) || (ISBLANK(Custom_Attribute_Value__c) &amp;&amp; NOT(ISBLANK(Item_Customization__c)))</errorConditionFormula>
        <errorMessage>You are specifying a customization for this item. Please provide values for both Custom Attribute Value and Item Customization</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Ship_To</fullName>
        <active>true</active>
        <description>Enforces the Cart Item to have a related Ship To. Intended for integration via API.</description>
        <errorConditionFormula>ISBLANK(Ship_To__c)</errorConditionFormula>
        <errorDisplayField>Ship_To__c</errorDisplayField>
        <errorMessage>Please provide a value for the Ship To</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Status</fullName>
        <active>true</active>
        <description>Enforces the Cart Item to have a Status. Intended for integration via API.</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please provide a value for the Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Quantity</fullName>
        <active>true</active>
        <description>Enforces the quantity to have a value, and be a valid number (equal to 0 or a multiple of the related item&apos;s packout quantity)</description>
        <errorConditionFormula>ISBLANK(Quantity__c) || Quantity__c &lt; 0 || MOD(Quantity__c, Item__r.Packout_Quantity__c) &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>The quantity is required, it must be zero or a multiple of the related item&apos;s packout quantity</errorMessage>
    </validationRules>
</CustomObject>